feat: page index moved to PageCollection
