# openapi.json
@@ -102,14 +102,14 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Return the retrieved pages as a JSON response\n\n\n\n`PageResource`",
+                        "description": "Return the retrieved pages as a JSON response\n\n\n\n`PageCollection`",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/components/schemas/PageResource"
+                                            "$ref": "#/components/schemas/PageCollection"
                                         }
                                     },
                                     "required": [
@@ -526,6 +526,13 @@
             }
         },
         "schemas": {
+            "PageCollection": {
+                "type": "array",
+                "items": {
+                    "$ref": "#/components/schemas/PageResource"
+                },
+                "title": "PageCollection"
+            },
             "PageRequest": {
                 "type": "object",
                 "properties": {
